nomard-cloning assign

--- a/Sass(0314)/nomard_cloning/index.html
+++ b/Sass(0314)/nomard_cloning/index.html
@@ -19,7 +19,7 @@
                 <a class="category" href="">All Courses</a>
                 <a class="category" href="">Roadmap</a>
                 <a class="category" href="">FAQ</a>
-                <a class="category" href="">Profile</a>
+                <a class="category signup" href="">Sign Up</a>
             </section>
         </section>
     </nav>
@@ -131,7 +131,27 @@
                 </section>
             </section>
         </section>
+        <div class="courses-btn">View All Courses</div>
     </main>
+
+    <footer>
+        <section>
+            <p>&copy; 해커하우스 | Hacker House</p>
+            <p>Registration #: 370-48-00411</p>
+            <p>Contact: lynn@nomadcoders.co</p>
+        </section>
+        <section>
+            <div>Terms of Use</div>
+            <div>Privacy Policy</div>
+        </section>
+        <section>
+            <div>About</div>
+            <div>수강후기</div>
+            <div>문의하기</div>
+        </section>
+    </footer>
+
+    <div class="chatbot">ChatBot</div>
 
 
 
